--- a/pages/index.html
+++ b/pages/index.html
@@ -66,8 +66,8 @@
     </psk-chapter>
 
     <psk-list>
-        1A hint message will be displayed for the user, to know that a controller for the component is not set. 1A hint message will be displayed for the user, to know that a controller for the component is not set. 1A hint message will be displayed for the user,
-        to know that a controller for the component is not set. 1A hint message will be displayed for the user, to know that a controller for the component is not set.
+        1A hint <code>message</code> will be displayed for the user, to know that a controller for the component is not set. 1A hint message will be displayed for the user, to know that a controller for the component is not set. 1A hint message will be
+        displayed for the user, to know that a controller for the component is not set. 1A hint message will be displayed for the user, to know that a controller for the component is not set.
         <psk-card>
             55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
             the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
@@ -95,13 +95,13 @@
             55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
             the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 55A hint message will be displayed for the user, to know that a controller
             for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
-            <table>
+            <table class="some class">
                 <thead>
                     <tr>
                         <td>aaa</td>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="aaaaa">
                     <tr>
                         <td>aaa</td>
                     </tr>
@@ -115,18 +115,18 @@
             <psk-list>
                 <ul>
                     <li>
-                        55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
-                        the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+                        55A hint message will be <code>displayed</code> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A
+                        hint message will be displayed for the user, to know that a <code>controller</code> for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
                     </li>
                     <li>
-                        55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
-                        the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+                        55A hint message will be displayed for the user, to know <abbr title="some title">that</abbr> a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component
+                        is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
                     </li>
                 </ul>
-                55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
-                the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 55A hint message will be displayed for the user, to know that a
-                controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component
-                is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+                55A hint message will be <a href="http://sadawdasd" target="_blank" rel="noopener noreferrer">displayed</a> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know
+                that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the
+                component is not set. 55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A
+                hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
             </psk-list>
             551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
         </psk-list>
