moved components to WebComponents

--- a/pages/WebComponents/psk-floating-menu/index.html
+++ b/pages/WebComponents/psk-floating-menu/index.html
@@ -8,7 +8,8 @@
     <psk-toc title="PSK - Floating Menu "></psk-toc>
 
     <psk-description>
-        <p>This component is providing the application navigation in a Floating Menu style.</p>
+        <p>This component is providing page options in a Floating Menu style.</p>
+        <p>It is mandatory in order to not make the site too cramped up.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
