--- a/pages/MVC/Controllers.html
+++ b/pages/MVC/Controllers.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <meta>
-  <script type="module" src="/build/app.esm.js"></script>
-  <script nomodule src="/build/app.js"></script>
-  </meta>
+<psk-page title="Tenders list">
+<psk-container >
 
-</head>
+  <psk-controller>
+      controller.state = {myName:"Catalin",cardList:[{name:"Tender1", status:"active"},{name:"Tender2", status:"inactive"}]};
+      controller.receive("eventName",(data)=>{console.log(data)});
+      controller.send("eventName",data);
+  </psk-controller>
 
-<body>
-<h1>Work in progress</h1>
-This is a simple external page that explains how controller works!
-</body>
-</html>
+  <psk-html>
+        <psk-toolbar actions=""></psk-toolbar>
+        <psk-cards data="cardList">
+          <psk-renderer>
+            <psk-table>
+              <psk-img></psk-img>| {name} | <psk-icon  icon="circle" rf-if="status| eq active"></psk-icon>
+              ^| <psk-button eventName="view" ></psk-button>
+            </psk-table>
+          </psk-renderer>
+        </psk-cards>
+  </psk-html>
+
+</psk-container>
+</psk-page>
