--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
     <meta charset="UTF-8">
     <title>PrivateSky Development Hub</title>
-	<meta name="msvalidate.01" content="D10000263ACA36C7F1DD12702D488822" />
     <meta name="Description" content="PrivateSky:PrivateSky: A bridge between blockchains and cloud or enterprise software">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +23,7 @@
 </head>
 
 <body>
-    <psk-app-root controller="DefaultController" history-type="query"> </psk-app-root>
+    <psk-app-root controller="DefaultController"></psk-app-root>
 </body>
 
 </html>
