--- a/pages/DocumentationComponents/psk-card/index.html
+++ b/pages/DocumentationComponents/psk-card/index.html
@@ -4,7 +4,7 @@
         </psk-card>
     </psk-tag>
 
-    <psk-toc title="PSK Card">
+    <psk-toc title="PSK Card - TOC">
     </psk-toc>
 
     <psk-description>
@@ -31,6 +31,19 @@
             <psk-card id="321021">
             </psk-card>
         </psk-tag>
+    </psk-chapter>
+
+    <psk-chapter title="Live Example">
+        <psk-example>
+            <psk-card title="PSK-card title" id="321021">
+                <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
+                    aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
+                    vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
+                <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
+                    vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
+                    convallis.</p>
+            </psk-card>
+        </psk-example>
     </psk-chapter>
 
 </psk-page>
