--- a/pages/DocumentationComponents/psk-chapter/index.html
+++ b/pages/DocumentationComponents/psk-chapter/index.html
@@ -4,7 +4,7 @@
         </psk-chapter>
     </psk-tag>
 
-    <psk-toc title="PSK Chapter">
+    <psk-toc title="PSK Chapter - TOC">
     </psk-toc>
 
     <psk-description>
@@ -16,6 +16,11 @@
         <psk-chapter data-define-props="true">
         </psk-chapter>
     </psk-property-descriptor>
+
+    <psk-event-descriptor title="Supported events">
+        <psk-chapter data-define-events="true">
+        </psk-chapter>
+    </psk-event-descriptor>
 
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
@@ -32,5 +37,16 @@
             </psk-chapter>
         </psk-tag>
     </psk-chapter>
+
+    <psk-example title="Live Example">
+        <psk-chapter title="PSK-chapter title">
+            <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
+                aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
+                vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
+            <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
+                vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
+                convallis.</p>
+        </psk-chapter>
+    </psk-example>
 
 </psk-page>
