--- a/pages/DocumentationComponents/psk-copy-clipboard/index.html
+++ b/pages/DocumentationComponents/psk-copy-clipboard/index.html
@@ -4,11 +4,12 @@
         </psk-copy-clipboard>
     </psk-tag>
 
-    <psk-toc title="PSK Copy Clipboard">
+    <psk-toc title="PSK Copy Clipboard - TOC">
     </psk-toc>
 
     <psk-description>
-        <p>This component role is copying in the clipboard a selected text zone using the properties of this component.
+        <p>This component role is copying in the clipboard the web address of a selected text zone using the properties
+            of this component.
         </p>
     </psk-description>
 
@@ -27,5 +28,11 @@
             </psk-copy-clipboard>
         </psk-tag>
     </psk-chapter>
+
+    <psk-example title="Live Example">
+        <psk-chapter Title="PSK-copy-clipboard Example">
+            <p>Click on the <b>#</b> element in the top right corner in order to copy the address in the clipboard.</p>
+        </psk-chapter>
+    </psk-example>
 
 </psk-page>
