--- a/pages/DocumentationComponents/psk-description/index.html
+++ b/pages/DocumentationComponents/psk-description/index.html
@@ -4,7 +4,7 @@
         </psk-description>
     </psk-tag>
 
-    <psk-toc title="PSK Description">
+    <psk-toc title="PSK Description - TOC">
     </psk-toc>
 
     <psk-description>
@@ -29,4 +29,14 @@
         </psk-tag>
     </psk-chapter>
 
+    <psk-example title="Live Example">
+        <psk-description title="PSK-description Example">
+            <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
+                aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
+                vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
+            <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
+                vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
+                convallis.</p>
+        </psk-description>
+    </psk-example>
 </psk-page>
