--- a/pages/DocumentationComponents/psk-example/index.html
+++ b/pages/DocumentationComponents/psk-example/index.html
@@ -4,7 +4,7 @@
         </psk-example>
     </psk-tag>
 
-    <psk-toc title="PSK Example">
+    <psk-toc title="PSK Example - TOC">
     </psk-toc>
 
     <psk-description>
