--- a/pages/DocumentationComponents/psk-link/index.html
+++ b/pages/DocumentationComponents/psk-link/index.html
@@ -4,7 +4,7 @@
         </psk-link>
     </psk-tag>
 
-    <psk-toc title="PSK Link">
+    <psk-toc title="PSK Link - TOC">
     </psk-toc>
 
     <psk-description>
@@ -17,10 +17,10 @@
         </psk-link>
     </psk-property-descriptor>
 
-    <psk-event-descriptor title="Supported properties">
-        <psk-link data-define-events="true">
+    <psk-controller-descriptor title="Events that supports Controller">
+        <psk-link data-define-controller="true">
         </psk-link>
-    </psk-event-descriptor>
+    </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
@@ -31,6 +31,12 @@
             <psk-link page="https://www.privatesky.xyz">
             </psk-link>
         </psk-tag>
+    </psk-chapter>
+    <psk-chapter title="Live Example">
+        <psk-example>
+            <psk-link page="https://www.privatesky.xyz">Click me to get redirected!
+            </psk-link>
+        </psk-example>
     </psk-chapter>
 
 </psk-page>
