--- a/pages/DocumentationComponents/psk-list/index.html
+++ b/pages/DocumentationComponents/psk-list/index.html
@@ -4,7 +4,7 @@
         </psk-list>
     </psk-tag>
 
-    <psk-toc title="PSK List">
+    <psk-toc title="PSK List - TOC">
     </psk-toc>
 
     <psk-description>
@@ -28,5 +28,12 @@
             </psk-list>
         </psk-tag>
     </psk-chapter>
-
+    <psk-example title="Live Example">
+        <psk-list list-type="bullet">
+            <p>First entry</p>
+            <p>Second entry</p>
+            <p>Third entry</p>
+            <p>Fourth entry</p>
+        </psk-list>
+    </psk-example>
 </psk-page>
