--- a/pages/DocumentationComponents/psk-tag/index.html
+++ b/pages/DocumentationComponents/psk-tag/index.html
@@ -4,7 +4,7 @@
         </psk-tag>
     </psk-tag>
 
-    <psk-toc title="PSK Tag">
+    <psk-toc title="PSK Tag - TOC">
     </psk-toc>
 
     <psk-description>
@@ -22,11 +22,9 @@
         <p>This component has no HTML children.</p>
     </psk-chapter>
 
-    <psk-chapter title="Code Example">
-        <psk-tag title="Title Example">
-            <psk-tag title="Title Example">
-            </psk-tag>
+    <psk-example title="Live Example">
+        <psk-tag title="PSK-tag Example">
         </psk-tag>
-    </psk-chapter>
+    </psk-example>
 
 </psk-page>
