--- a/pages/DocumentationComponents/psk-toc/index.html
+++ b/pages/DocumentationComponents/psk-toc/index.html
@@ -4,7 +4,7 @@
         </psk-toc>
     </psk-tag>
 
-    <psk-toc title="PSK Table of Content">
+    <psk-toc title="PSK Table of Content - TOC">
     </psk-toc>
 
     <psk-description>
@@ -29,5 +29,7 @@
             </psk-toc>
         </psk-tag>
     </psk-chapter>
-
+    <psk-example title="Live Example">
+        <p>The example for this component can be seen at the beggining of every documentation page as the page TOC.</p>
+    </psk-example>
 </psk-page>
