--- a/pages/DocumentationComponents/psk-code/index.html
+++ b/pages/DocumentationComponents/psk-code/index.html
@@ -4,7 +4,7 @@
         </psk-code>
     </psk-tag>
 
-    <psk-toc title="PSK Code">
+    <psk-toc title="PSK Code - TOC">
     </psk-toc>
 
     <psk-description>
@@ -32,5 +32,14 @@
             </psk-code>
         </psk-tag>
     </psk-chapter>
+
+    <psk-example title="Live Example">
+        <psk-code title="PSK-code title " language="Javascript">
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
+				var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
+				return v.toString(16);
+			});
+        </psk-code>
+    </psk-example>
 
 </psk-page>
