--- a/pages/DocumentationComponents/psk-img/index.html
+++ b/pages/DocumentationComponents/psk-img/index.html
@@ -4,7 +4,7 @@
         </psk-img>
     </psk-tag>
 
-    <psk-toc title="PSK Img">
+    <psk-toc title="PSK Img - TOC">
     </psk-toc>
 
     <psk-description>
@@ -31,5 +31,8 @@
             </psk-img>
         </psk-tag>
     </psk-chapter>
-
+    <psk-example title="Live Example">
+        <psk-img title="PSK-img Example" src="PrivateSky/EDFS.png">
+        </psk-img>
+    </psk-example>
 </psk-page>
