--- a/pages/DocumentationComponents/psk-page/index.html
+++ b/pages/DocumentationComponents/psk-page/index.html
@@ -4,7 +4,7 @@
         </psk-page>
     </psk-tag>
 
-    <psk-toc title="PSK Page">
+    <psk-toc title="PSK Page - TOC">
     </psk-toc>
 
     <psk-description>
@@ -33,5 +33,14 @@
             </psk-page>
         </psk-tag>
     </psk-chapter>
-
+    <psk-example title="Live Example">
+        <psk-page title="PSK-page Example">
+            <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
+                aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
+                vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
+            <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
+                vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
+                convallis.</p>
+        </psk-page>
+    </psk-example>
 </psk-page>
