--- a/pages/DocumentationComponents/psk-chapter/index.html
+++ b/pages/DocumentationComponents/psk-chapter/index.html
@@ -39,7 +39,7 @@
     </psk-chapter>
 
     <psk-example title="Live Example">
-        <psk-chapter title="PSK-chapter title">
+        <psk-chapter title="PSK-chapter Example">
             <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
                 aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
                 vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
