--- a/pages/DocumentationComponents/psk-card/index.html
+++ b/pages/DocumentationComponents/psk-card/index.html
@@ -33,17 +33,15 @@
         </psk-tag>
     </psk-chapter>
 
-    <psk-chapter title="Live Example">
-        <psk-example>
-            <psk-card title="PSK-card title" id="321021">
-                <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
-                    aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
-                    vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
-                <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
-                    vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
-                    convallis.</p>
-            </psk-card>
-        </psk-example>
-    </psk-chapter>
+    <psk-example title="Live Example">
+        <psk-card title="PSK-card title" id="321021">
+            <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
+                aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
+                vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
+            <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
+                vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
+                convallis.</p>
+        </psk-card>
+    </psk-example>
 
 </psk-page>
