--- a/pages/DocumentationComponents/psk-table/index.html
+++ b/pages/DocumentationComponents/psk-table/index.html
@@ -29,7 +29,10 @@
 
     <psk-example title="Live Example">
         <psk-table head="true" footer="true">
-            <p>Something Nice</p><p>Something Not Nice</p><p>Something Beautifull</p>
+            Title | Author | Published Year | Number of pages
+            The Water Dancer | Ta-Nehisi Coates | 2019 | 416
+            Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
+            Title | Author | Published Year | Number of pages
         </psk-table>
     </psk-example>
 </psk-page>
