--- a/pages/DocumentationComponents/psk-table/index.html
+++ b/pages/DocumentationComponents/psk-table/index.html
@@ -22,9 +22,14 @@
 
     <psk-chapter title="Code Example">
         <psk-tag title="Head and Footer Example">
-            <psk-table head="false" footer="true">
+            <psk-table head="true" footer="true">
+                Title | Author | Published Year | Number of pages
+                The Water Dancer | Ta-Nehisi Coates | 2019 | 416
+                Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
+                Title | Author | Published Year | Number of pages
             </psk-table>
         </psk-tag>
+
     </psk-chapter>
 
     <psk-example title="Live Example">
