--- a/pages/DocumentationComponents/psk-card/index.html
+++ b/pages/DocumentationComponents/psk-card/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-card">
     <psk-tag>
-        <psk-card>
-        </psk-card>
+        <psk-card></psk-card>
     </psk-tag>
 
     <psk-toc title="PSK Card - TOC">
