--- a/pages/DocumentationComponents/psk-chapter/index.html
+++ b/pages/DocumentationComponents/psk-chapter/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-chapter">
     <psk-tag>
-        <psk-chapter>
-        </psk-chapter>
+        <psk-chapter></psk-chapter>
     </psk-tag>
 
     <psk-toc title="PSK Chapter - TOC">
