--- a/pages/DocumentationComponents/psk-code/index.html
+++ b/pages/DocumentationComponents/psk-code/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-code">
     <psk-tag>
-        <psk-code>
-        </psk-code>
+        <psk-code></psk-code>
     </psk-tag>
 
     <psk-toc title="PSK Code - TOC">
