--- a/pages/DocumentationComponents/psk-copy-clipboard/index.html
+++ b/pages/DocumentationComponents/psk-copy-clipboard/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-copy-clipboard">
     <psk-tag>
-        <psk-copy-clipboard>
-        </psk-copy-clipboard>
+        <psk-copy-clipboard></psk-copy-clipboard>
     </psk-tag>
 
     <psk-toc title="PSK Copy Clipboard - TOC">
