--- a/pages/DocumentationComponents/psk-description/index.html
+++ b/pages/DocumentationComponents/psk-description/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-description">
     <psk-tag>
-        <psk-description>
-        </psk-description>
+        <psk-description></psk-description>
     </psk-tag>
 
     <psk-toc title="PSK Description - TOC">
