--- a/pages/DocumentationComponents/psk-img/index.html
+++ b/pages/DocumentationComponents/psk-img/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-img">
     <psk-tag>
-        <psk-img>
-        </psk-img>
+        <psk-img></psk-img>
     </psk-tag>
 
     <psk-toc title="PSK Img - TOC">
