--- a/pages/DocumentationComponents/psk-link/index.html
+++ b/pages/DocumentationComponents/psk-link/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-link">
     <psk-tag>
-        <psk-link>
-        </psk-link>
+        <psk-link></psk-link>
     </psk-tag>
 
     <psk-toc title="PSK Link - TOC">
