--- a/pages/DocumentationComponents/psk-list/index.html
+++ b/pages/DocumentationComponents/psk-list/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-list">
     <psk-tag>
-        <psk-list>
-        </psk-list>
+        <psk-list></psk-list>
     </psk-tag>
 
     <psk-toc title="PSK List - TOC">
