--- a/pages/DocumentationComponents/psk-page/index.html
+++ b/pages/DocumentationComponents/psk-page/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-page">
     <psk-tag>
-        <psk-page>
-        </psk-page>
+        <psk-page></psk-page>
     </psk-tag>
 
     <psk-toc title="PSK Page - TOC">
