--- a/pages/DocumentationComponents/psk-table/index.html
+++ b/pages/DocumentationComponents/psk-table/index.html
@@ -23,7 +23,7 @@
     <psk-chapter title="Code Example">
         <psk-tag title="Head and Footer Example">
             <psk-table head="true" footer="true">
-                Title | Author | Published Year | Number of pages
+                Title | Author | Published Year | Number of pages <br>
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
                 Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
                 Title | Author | Published Year | Number of pages
