--- a/pages/DocumentationComponents/psk-tag/index.html
+++ b/pages/DocumentationComponents/psk-tag/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-tag">
     <psk-tag>
-        <psk-tag>
-        </psk-tag>
+        <psk-tag></psk-tag>
     </psk-tag>
 
     <psk-toc title="PSK Tag - TOC">
