--- a/pages/DocumentationComponents/psk-toc/index.html
+++ b/pages/DocumentationComponents/psk-toc/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-toc">
     <psk-tag>
-        <psk-toc>
-        </psk-toc>
+        <psk-toc></psk-toc>
     </psk-tag>
 
     <psk-toc title="PSK Table of Content - TOC">
