--- a/pages/DocumentationComponents/psk-example/index.html
+++ b/pages/DocumentationComponents/psk-example/index.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-example">
     <psk-tag>
-        <psk-example>
-        </psk-example>
+        <psk-example></psk-example>
     </psk-tag>
 
     <psk-toc title="PSK Example - TOC">
