psk-table doc fix

--- a/pages/DocumentationComponents/psk-table/index.html
+++ b/pages/DocumentationComponents/psk-table/index.html
@@ -21,14 +21,14 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-tag title="Head and Footer Example">
+        <psk-code>
             <psk-table head="true" footer="true">
-                Title | Author | Published Year | Number of pages <br>
+                Title | Author | Published Year | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
                 Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
                 Title | Author | Published Year | Number of pages
             </psk-table>
-        </psk-tag>
+        </psk-code>
 
     </psk-chapter>
 
