--- a/pages/DocumentationComponents/psk-table/index.html
+++ b/pages/DocumentationComponents/psk-table/index.html
@@ -21,7 +21,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="html">
             <psk-table head="true" footer="true">
                 Title | Author | Published Year | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
@@ -29,6 +29,15 @@
                 Title | Author | Published Year | Number of pages
             </psk-table>
         </psk-code>
+
+
+        <psk-code language="javascript">
+            let messagePrompter = function(message) {
+            console.log(message);
+            }
+            messagePrompter("Hello world");
+        </psk-code>
+
 
     </psk-chapter>
 
