refactoring to introduce choreo module

--- a/pages/PrivateSky/Innovations.html
+++ b/pages/PrivateSky/Innovations.html
@@ -1,6 +1,6 @@
 <psk-page title="PrivateSky Innovations">
     <psk-chapter title="Innovative Blockchain Arhitecture">
-      A short presentation of blockchain arhitectures proposed by privateSky can be found here:  <a href ="https://privatesky.xyz/#/PrivateSky/Architecture" > Architecture for Blockchain</a>
+      A short presentation of blockchain arhitectures proposed by privateSky can be found here:  <psk-link page="PrivateSky/Architecture" > Architecture for Blockchain</psk-link>
     </psk-chapter>
 
   <psk-chapter title="EDFS sub-project">
@@ -127,7 +127,7 @@
     </psk-chapter>
 
     <psk-chapter title="Encrypted Choregraphies security model">
-      Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general. <a href="/#/Development/Encrypted%20Choreographies">Detailed descriptions the implementation of Encrypted Choregraphies </a>
+      Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general. <psk-link page="Development/encrypted-choreographies">Detailed descriptions the implementation of Encrypted Choregraphies </psk-link>
     </psk-chapter>
 
     <psk-chapter title="OBFT consensus algorithm">
