refactoring to introduce choreo module

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,21 +10,21 @@
         - DApps, diverse types of Blockchain Applications, Consortium / Private Distributed Ledgers. The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of
         performant methods of storing and handling private and confidential data. An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default. For a quick understanding of the swarm communication set
         we suggest our article
-        <psk-link page="PrivateSky/Swarms Explained"> Swarm communication explained</psk-link>
+        <psk-link page="PrivateSky/swarms-explained"> Swarm communication explained</psk-link>
         Links to the descriptions of the major PrivateSky innovation and resources for developers can be found bellow.
     </psk-chapter>
 
     <psk-chapter title="EDFS: Near-chain storage">
         The EDFS sub-project announcement and the near-chain concept is presented in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30, Toulon,
         France. A presentation of the idea can be found here:
-        <psk-link page="privatesky/main innovations">Information about EDFS, BARs, CSBs</psk-link>
+        <psk-link page="PrivateSky/main-innovations">Information about EDFS, BARs, CSBs</psk-link>
 
     </psk-chapter>
 
     <psk-chapter title="Secret Smart Contracts">
         The first public presentation of the secret smart contract concept is published in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30,
         Toulon, France. A short presentation of the concept can be found here:
-        <psk-link page="privatesky/main innovations">Secret Smart Contracts</psk-link>
+        <psk-link page="PrivateSky/main-innovations">Secret Smart Contracts</psk-link>
     </psk-chapter>
 
     <psk-chapter title="Self-Sovereign Applications">
@@ -33,7 +33,7 @@
         and Interoperable Systems, Neuchâtel, Switzerland,June 2017 and
         <i>"Towards a smart society through personal assistants employing executable choreographies" </i>, ISD 2017, 6-8 Sep 2017 26th International Conference on Information Systems Development We are working to write an publish a new scientific articles
         on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here:
-        <psk-link page="privatesky/main innovations">Self-Sovereign Applications</psk-link>
+        <psk-link page="PrivateSky/main-innovations">Self-Sovereign Applications</psk-link>
 
     </psk-chapter>
 
@@ -59,9 +59,9 @@
 
         </psk-chapter>
 
-        <psk-chapter title="Advanced Technical documentation">
+        <psk-chapter title="Advanced Technical Details">
             The preliminary texts can be found here:
-            <psk-link page="Development/Advanced"> Advanced Technical documentation</psk-link>
+            <psk-link page="Development/Advanced"> Advanced Technical Details</psk-link>
         </psk-chapter>
     </psk-chapter>
 
