better documentation map

--- a/pages/About/how-to-write-pages.html
+++ b/pages/About/how-to-write-pages.html
@@ -10,6 +10,9 @@
   </psk-chapter>
 
   <psk-chapter title="Available tags">
+    <psk-chapter title="Icons">
+      <psk-code> https://fontawesome.com/icons?d=gallery&m=free </psk-code>
+    </psk-chapter>
 
     <psk-chapter title="psk-page">
       Starts a page, this tag is required
