--- a/pages/About/how-to-write-pages.html
+++ b/pages/About/how-to-write-pages.html
@@ -5,7 +5,7 @@
   </psk-chapter>
 
 
-  <psk-chapter title="Change the menu in pages-structures.json">
+  <psk-chapter title="Change the menu in app-config.json">
 
   </psk-chapter>
 
