modified description for psk-card.html + psk-copy-clipboard.html

--- a/pages/psk-wiki/psk-card.html
+++ b/pages/psk-wiki/psk-card.html
@@ -4,8 +4,16 @@
     </psk-toc>
 
     <psk-description>
-        <p>This component is a html card, with the specified id, that shows the title chosen by the developer.</p>
-        <p>The card header will contain an <code>psk-copy-clipboard</code>(copy shortcut) with the id .</p>
+        <p>This component's main role is rendering the info in a more pleasant way for both the user and the developer .
+        </p>
+        <p>It is easy to use as she gets two parameters(<code>Id</code> and <code>Title</code>).</p>
+        <p>If both parameters are given to the component next to the title another component will be rendered:</p>
+        <p>
+            <psk-code>
+                <psk-link page="path/.../component/file"></psk-link>
+            </psk-code>
+        </p>
+        <p></p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -19,24 +27,17 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-card title="Psk Card Title Example">
-            </psk-card>
-        </psk-code>
-
-        <psk-code>
-            <psk-card id="321021">
+            <psk-card title="PSK-card title" id="321021">
+                <p>This is a dummy card rendered for you pleasing my lord!</p>
+                <p>Believe me I have nothing to do with all this misunderstanding.</p>
             </psk-card>
         </psk-code>
     </psk-chapter>
 
     <psk-example title="Live Example">
         <psk-card title="PSK-card title" id="321021">
-            <p>Lorem ipsum dolor sit amet, pellentesque nec aenean quam, et lorem suscipit quisque, eget lorem
-                aliquam et vestibulum suscipit id, euismod amet, sem mollit dolor nullam lacus accumsan sed. Sem
-                vitae aliquet, nec tempus interdum morbi, ac id facilis.</p>
-            <p>Nascetur enim id metus et, nulla velit sit bibendum vestibulum, aenean repudiandae nec id risus
-                vestibulum lobortis, nostra nunc enim donec ut in sit. Sit aperiam, blandit elit donec litora
-                convallis.</p>
+            <p>This is a dummy card rendered for you pleasing my lord!</p>
+            <p>Believe me I have nothing to do with all this misunderstanding.</p>
         </psk-card>
     </psk-example>
 
