--- a/pages/psk-wiki/psk-copy-clipboard.html
+++ b/pages/psk-wiki/psk-copy-clipboard.html
@@ -5,8 +5,10 @@
 
     <psk-description>
         <p>This component role is copying in the clipboard the web address of a selected text zone using the properties
-            of this component.
-        </p>
+            of this component.</p>
+        <p>It is easy to use as it gets the <code>id</code> as property so it can be easily copied and send forward.</p>
+        <p>It is rendered inside the <code>psk-card</code> so the user can benefit of it's usefulness for every card
+            that is created. </p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -20,13 +22,13 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-copy-clipboard id="2314:4123:4124">
+            <psk-copy-clipboard>
             </psk-copy-clipboard>
         </psk-code>
     </psk-chapter>
 
     <psk-example title="Live Example">
-        <psk-chapter Title="PSK-copy-clipboard Example">
+        <psk-chapter Title="PSK-copy-clipboard Example" id="2314:4123:4124">
             <p>Click on the <b>#</b> element in the top right corner in order to copy the address in the clipboard.</p>
         </psk-chapter>
     </psk-example>
