remodeled psk-card.html

--- a/pages/psk-wiki/psk-card.html
+++ b/pages/psk-wiki/psk-card.html
@@ -7,13 +7,9 @@
         <p>This component's main role is rendering the info in a more pleasant way for both the user and the developer .
         </p>
         <p>It is easy to use as she gets two parameters(<code>Id</code> and <code>Title</code>).</p>
-        <p>If both parameters are given to the component next to the title another component will be rendered:</p>
-        <p>
-            <psk-code>
-                <psk-link page="path/.../component/file"></psk-link>
-            </psk-code>
+        <p>If both parameters are given to the component next to the title another component will be rendered,
+            <psk-link page="psk-wiki/psk-copy-clipboard">psk-copy-clipboard</psk-link>
         </p>
-        <p></p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -28,16 +24,20 @@
     <psk-chapter title="Code Example">
         <psk-code>
             <psk-card title="PSK-card title" id="321021">
-                <p>This is a dummy card rendered for you pleasing my lord!</p>
-                <p>Believe me I have nothing to do with all this misunderstanding.</p>
+                <p>JavaScript was created by Brendan Eich in 1995 during his time at Netscape Communications. It was
+                    inspired by Java, Scheme and Self.</p>
+                <p>Eich continued to oversee the development of SpiderMonkey, the specific implementation of JavaScript
+                    in Navigator.</p>
             </psk-card>
         </psk-code>
     </psk-chapter>
 
     <psk-example title="Live Example">
         <psk-card title="PSK-card title" id="321021">
-            <p>This is a dummy card rendered for you pleasing my lord!</p>
-            <p>Believe me I have nothing to do with all this misunderstanding.</p>
+            <p>JavaScript was created by Brendan Eich in 1995 during his time at Netscape Communications. It was
+                inspired by Java, Scheme and Self.</p>
+            <p>Eich continued to oversee the development of SpiderMonkey, the specific implementation of JavaScript
+                in Navigator.</p>
         </psk-card>
     </psk-example>
 
