--- a/pages/psk-wiki/psk-description.html
+++ b/pages/psk-wiki/psk-description.html
@@ -4,9 +4,8 @@
     </psk-toc>
 
     <psk-description>
-        <p>This component creates a <code>psk-chapter</code> using the title property.</p>
-        <p>It's role is to create a good looking description for the documentaion.
-        </p>
+        <p>This component creates a <psk-link page ="psk-wiki/psk-chapter">psk-chapter</psk-link> using the title property.</p>
+        <p>It's role is to create a good looking description for the documentaion.  </p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
