--- a/pages/psk-web-components/icon.html
+++ b/pages/psk-web-components/icon.html
@@ -5,7 +5,7 @@
     <psk-description>
         <p>This component will render an icon for the user.</p>
         <p>The icon must be found in the font-awesome list of icons:</p>
-        <psk-link page="https://fontawesome.com/icons?d=gallery&m=free"></psk-link>
+        <a href="https://fontawesome.com/icons?d=gallery&m=free">Icons List</a>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -19,12 +19,11 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-icon icon="buffer" color="rgb(208, 31, 208)">
+            <psk-icon icon="user" color="rgb(208, 31, 208)">
             </psk-icon>
         </psk-code>
     </psk-chapter>
-    <psk-example title="Live Example">
-        <psk-icon icon="buffer" color="rgb(208, 31, 208)">
-        </psk-icon>
-    </psk-example>
+    
+    <psk-icon icon="user" color="rgb(208, 31, 208)">
+    </psk-icon>
 </psk-page>
