--- a/pages/psk-wiki/psk-card.html
+++ b/pages/psk-wiki/psk-card.html
@@ -6,7 +6,7 @@
     <psk-description>
         <p>This component's main role is rendering the info in a more pleasant way for both the user and the developer .
         </p>
-        <p>It is easy to use as she gets two parameters(<code>Id</code> and <code>Title</code>).</p>
+        <p>It is easy to use as it gets two parameters(<code>Id</code> and <code>Title</code>).</p>
         <p>If both parameters are given to the component next to the title another component will be rendered,
             <psk-link page="psk-wiki/psk-copy-clipboard">psk-copy-clipboard</psk-link>
         </p>
@@ -18,7 +18,10 @@
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>This component has no HTML children.</p>
+        <p>This component renders two slots, one with the toolbar name which renders a :
+            <psk-link page="psk-wiki/psk-toolbar">psk-toolbar</psk-link> component.
+        </p>
+        <p>The other one renders the info given in the tag in the newly created .</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
