--- a/pages/psk-wiki/psk-code.html
+++ b/pages/psk-wiki/psk-code.html
@@ -4,8 +4,9 @@
     </psk-toc>
 
     <psk-description>
-        <p>This component is creating another <code>psk-chapter</code> in which he uses the <code>title
-            </code> as the header title and the language as the coding language.</p>
+        <p>This component is creating another <psk-link page="psk-wiki/psk-chapter">psk-chapter</psk-link> in which he
+            uses the <code>title</code> as the header title and the language as the coding language.</p>
+        <p>The component has the HTML language the default one in case no other is given.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -19,14 +20,14 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-code title="Psk Chapter Title Example">
+            <psk-code title="PSK-code title " language="Javascript">
+                return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
+                var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
+                return v.toString(16);
+                });
             </psk-code>
         </psk-code>
-
-        <psk-code>
-            <psk-code language="Javascript">
-            </psk-code>
-        </psk-code>
+  
     </psk-chapter>
 
     <psk-example title="Live Example">
